# tfa-wasm

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/app/: globals.css  page.tsx
src/components/: component.tsx
src/components/form/: index.tsx
src/components/icons/: ChevronRightIcon.tsx  CopyIcon.tsx
src/components/otp/: index.tsx
src/components/state/: index.tsx
src/components/sub-form/: Input.tsx  index.tsx
src/components/ui/: Modal.tsx  card.tsx
src/interfaces/: index.ts
src/lib/: db.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  otp.rs
