[package]
name = "wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
totp-rs = { path = "/Users/carlos/Desktop/proyects/totp-rs" }
base32 = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }


